sumo/tests/sumo/extended/vaporizer/errors/begin_negative/errors.sumo
Error: A vaporization begin is negative (edge id='middle').
Quitting (on error).
